--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     --white-stat-headings: hsla(0, 0%, 100%, 0.6);
 
     /* Fonts */
-    --font-size: clamp(13.6px, 3vw, 1.2rem);
+    --font-size: clamp(12px, 3vw, 1rem);
 
     /* Widths */
     --mobile-body-width: clamp(23.5rem, 100%, 38rem);
@@ -22,19 +22,19 @@
 .inter-font-family {
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 400;
+    font-weight: 700;
     font-style: normal;
-    color: var(--white-paragraph);
+    color: var(--white-heading);
+    font-size: clamp(1rem, 3vw, 1.4rem);
     text-align: center;
-    font-size: var(--font-size);
 }
 
 .lexend-deca-font-family {
     font-family: "Lexend Deca", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 700;
+    font-weight: 400;
     font-style: normal;
-    color: var(--white-heading);
+    color: var(--white-paragraph);
     text-align: center;
     font-size: var(--font-size);
 }
@@ -58,12 +58,11 @@ body {
 .container-component {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    gap: 16px;
+    gap: 24px;
     padding-block-end: 1.5rem;
-    width: 80%;
-    height: 680px;
+    width: 75%;
+    height: 590px;
     border-radius: 8px;
     background-color: var(--blue-card-background);
     overflow: hidden;
@@ -71,12 +70,14 @@ body {
 
 .image-hero {
     width: 100%;
-    height: 50%;
+    height: 33%;
+    margin-block-end: 3rem;
 }
 
 .image-hero img {
     width: 100%;
-    height: 90%;
+    height: 100%;
+    /* object-fit: cover; */
 }
 
 .container-description {
@@ -88,13 +89,11 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 1.5rem;
+    gap: 2rem;
 }
 
 .main-description h1 {
-    font-size: clamp(1.4rem, 3vw, 2rem);
-    text-align: center;
-    margin-block-start: 1rem;
+    font-size: clamp(1.37rem, 3vw, 2rem);
 }
 
 .main-description span {
@@ -112,11 +111,9 @@ body {
     align-items: center;
 }
 
-.social-icons span {
-    font-size: clamp(1.2rem, 3vw, 1.8rem);
-}
-
 .social-icons p {
     font-size: var(--font-size);
-    margin-block-end: 1rem;
+    margin-block-end: 1.5rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
 }
