--- a/style.css
+++ b/style.css
@@ -117,3 +117,65 @@ body {
     text-transform: uppercase;
     letter-spacing: 1px;
 }
+
+@media (min-width: 1024px) {
+    body {
+        width: var(--desktop-body-width);
+    }
+
+    .container-component {
+        flex-direction: row-reverse;
+        width: clamp(42rem, 60%, 60rem);
+        height: 390px;
+    }
+
+    .image-hero {
+        width: 70%;
+        height: 150%;
+        
+    }
+
+    .container-description {
+        width: 40%;
+        height: 100%;
+    }
+
+    .main-description h1 {
+        margin-block-end: 2rem;
+        text-align: start;
+        font-size: clamp(1.5rem, 5vw, 2.2rem);
+    }
+
+    .container-description {
+        width: 100%;
+        height: 100%;
+        font-weight: 700;
+        padding-inline: 3rem;
+        margin-block-start: 2rem;
+        align-items: start;
+        gap: 3rem;
+    }
+
+    .container-description p {
+        text-align: start;
+        font-size: clamp(0.7rem, 1.5vw, 1.1rem);
+        width: 90%;
+    }
+
+    .social-icons {
+        display: flex;
+        flex-direction: row;
+        gap: 3.5rem;
+        text-align: start;
+    }
+
+    .social-icons span {
+        font-size: 1.3rem;
+    }
+
+    .social-icons p {
+        font-size: 0.7rem;
+        margin-block-start: 0.5rem;
+    }
+
+}
